--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         tools:context=".MainActivity">
 
     <ListView
             android:id="@+id/lv_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="false"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/lvmovie_catalogue"
+            android:divider="@null"
     />
 
 
