--- a/app/src/main/res/layout/lvmovie_catalogue.xml
+++ b/app/src/main/res/layout/lvmovie_catalogue.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_margin="20dp"
+              android:padding="10dp"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+              android:layout_height="wrap_content">
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:orientation="horizontal"
-    >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <ImageView
-                android:id="@+id/ivPoster"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:id="@+id/iv_poster"
+                android:layout_width="100dp"
+                android:layout_height="170dp"
                 tools:src="#000"
         />
         <TextView
-                android:id="@+id/tvJudul"
+                android:id="@+id/tv_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
