--- a/app/src/main/res/layout/activity_detail_tv_show.xml
+++ b/app/src/main/res/layout/activity_detail_tv_show.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:layout_margin="17dp"
         android:orientation="vertical"
-        tools:context=".DetailActivity">
+        tools:context=".DetailTvShowActivity">
     <ImageView
             android:id="@+id/iv_poster"
             android:layout_width="140dp"
@@ -63,7 +63,7 @@
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/budget"
+            android:text="@string/runtime"
             android:textSize="18sp"
             android:textColor="#000"
             android:textStyle="bold"
@@ -75,7 +75,7 @@
             android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
     <TextView
-            android:id="@+id/tv_budget"
+            android:id="@+id/tv_runtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Status"
