--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,14 @@
         android:layout_height="match_parent"
         android:layout_margin="17dp"
         android:orientation="vertical"
-        tools:context=".DetailActivity">
+        tools:context=".detailmovie.DetailActivity">
+    <ProgressBar
+            android:id="@+id/loading_detail_movie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:ignore="MissingConstraints" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <ImageView
             android:id="@+id/iv_poster"
             android:layout_width="140dp"
