--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,4 +11,9 @@
             android:icon="@drawable/ic_tv_black_24dp"
             android:title="@string/tv_show"/>
 
+    <item
+            android:id="@+id/navigation_favorite"
+            android:icon="@drawable/ic_star_black"
+            android:title="@string/favorites"/>
+
 </menu>
