--- a/app/src/main/res/menu/language.xml
+++ b/app/src/main/res/menu/language.xml
@@ -4,4 +4,9 @@
             android:id="@+id/action_change_settings"
             android:title="@string/change_language"
             app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/action_change_reminders"
+        android:title="@string/reminder"
+        app:showAsAction="never"/>
 </menu>
