--- a/app/src/main/res/layout/fragment_fav_movies.xml
+++ b/app/src/main/res/layout/fragment_fav_movies.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -14,7 +14,7 @@
             android:layout_margin="16dp"
             android:orientation="vertical">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvFavMovie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,4 +33,4 @@
             app:layout_constraintTop_toTopOf="@+id/linearLayout"
             tools:ignore="MissingConstraints" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
