--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -7,14 +7,14 @@
         android:orientation="vertical"
         android:layout_margin="16dp"
         tools:context=".favorites.FavoritesFragment">
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout_fav"
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager_fav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
