--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,14 +7,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".search.SearchFragment">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout_search1"
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
             app:tabMode="fixed"
             app:tabGravity="fill"/>
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/view_pager_search1"/>
