--- a/app/src/main/res/layout/fragment_search_movie.xml
+++ b/app/src/main/res/layout/fragment_search_movie.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -29,7 +29,7 @@
                 android:iconifiedByDefault="false"
                 tools:ignore="MissingConstraints" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_search_movies"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -39,4 +39,4 @@
                 tools:listitem="@layout/rvmovie_item" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
