--- a/app/src/main/res/layout/rvfavtvshow_item.xml
+++ b/app/src/main/res/layout/rvfavtvshow_item.xml
@@ -5,7 +5,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
             android:layout_marginTop="10dp"
             android:id="@+id/cv_list_favtvshow"
             android:layout_width="match_parent"
@@ -24,5 +24,5 @@
                     android:textColor="#000"
                     android:textSize="18sp"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
